@@ -14,7 +14,6 @@ extern object *create_archetype_by_object_name(const char *name);
 extern void init_archetypes(void);
 extern void arch_info(object *op);
 extern void clear_archetable(void);
-extern void init_archetable(void);
 extern void dump_arch(archetype *at, StringBuffer *sb);
 extern void dump_all_archetypes(void);
 extern void free_arch(archetype *at);
@@ -36,18 +35,15 @@ extern void use_trigger(object *op);
 extern void animate_turning(object *op);
 extern int check_altar_sacrifice(const object *altar, const object *sacrifice, int remove_others, int *toremove);
 extern int operate_altar(object *altar, object **sacrifice);
-extern void trigger_move(object *op, int state);
 extern int check_trigger(object *op, object *cause);
 extern void add_button_link(object *button, mapstruct *map, int connected);
 extern void remove_button_link(object *op);
-extern objectlink *get_button_links(const object *button);
 extern int get_button_value(const object *button);
 extern object *check_inv_recursive(object *op, const object *trig);
 extern void check_inv(object *op, object *trig);
 extern void verify_button_links(const mapstruct *map);
 /* dialog.c */
 extern void free_dialog_information(object *op);
-extern void parse_dialog_information(object *op);
 extern int get_dialog_message(object *op, const char *text, struct_dialog_message **message, struct_dialog_reply **reply);
 /* exp.c */
 extern sint64 new_exp(const object *ob);
@@ -85,15 +81,10 @@ extern void free_socket_images(void);
 extern int get_face_fallback(int faceset, int imageno);
 /* init.c */
 extern void init_library(void);
-extern void init_environ(void);
 extern void init_globals(void);
 extern void free_globals(void);
 extern void init_objects(void);
-extern void init_defaults(void);
-extern void init_dynamic(void);
 extern void write_todclock(void);
-extern void init_clocks(void);
-extern void init_attackmess(void);
 /* item.c */
 extern int get_power_from_ench(int ench);
 extern int calc_item_power(const object *op, int flag);
@@ -133,7 +124,6 @@ extern void add_statbonus(object *op);
 extern void fix_object(object *op);
 extern int allowed_class(const object *op);
 extern void set_dragon_name(object *pl, const object *abil, const object *skin);
-extern void dragon_level_gain(object *who);
 extern object *give_skill_by_name(object *op, const char *skill_name);
 extern void player_lvl_adj(object *who, object *op);
 extern sint64 level_exp(int level, double expmul);
@@ -168,16 +158,11 @@ extern int get_map_flags(mapstruct *oldmap, mapstruct **newmap, sint16 x, sint16
 extern int blocked_link(object *ob, mapstruct *m, int sx, int sy);
 extern int ob_blocked(const object *ob, mapstruct *m, sint16 x, sint16 y);
 extern void fix_container(object *container);
-extern void load_objects(mapstruct *m, FILE *fp, int mapflags);
-extern int save_objects(mapstruct *m, FILE *fp, FILE *fp2, int flag);
 extern mapstruct *get_linked_map(void);
-extern void allocate_map(mapstruct *m);
 extern mapstruct *get_empty_map(int sizex, int sizey);
 extern mapstruct *load_original_map(const char *filename, int flags);
-extern mapstruct *load_overlay_map(const char *filename, mapstruct *m);
 extern int save_map(mapstruct *m, int flag);
 extern void clean_object(object *op);
-extern void free_all_objects(mapstruct *m);
 extern void free_map(mapstruct *m);
 extern void delete_map(mapstruct *m);
 extern mapstruct *ready_map_name(const char *name, int flags);
@@ -244,7 +229,6 @@ extern object *insert_ob_in_map(object *op, mapstruct *m, object *originator, in
 extern void replace_insert_ob_in_map(const char *arch_string, object *op);
 extern object *get_split_ob(object *orig_ob, uint32 nr, char *err, size_t size);
 extern object *decrease_ob_nr(object *op, uint32 i);
-extern void increase_ob_nr(object *op, uint32 i);
 extern void add_weight(object *op, signed long weight);
 extern object *insert_ob_in_ob(object *op, object *where);
 extern int check_move_on(object *op, object *originator);
@@ -312,16 +296,11 @@ extern const readable_message_type *get_readable_message_type(object *readable);
 /* recipe.c */
 extern recipelist *get_formulalist(int i);
 extern void init_formulae(void);
-extern void check_formulae(void);
 extern void dump_alchemy(void);
 extern archetype *find_treasure_by_name(const treasure *t, const char *name, int depth);
-extern long find_ingred_cost(const char *name);
 extern void dump_alchemy_costs(void);
-extern const char *ingred_name(const char *name);
 extern int strtoint(const char *buf);
 extern artifact *locate_recipe_artifact(const recipe *rp, size_t idx);
-extern int numb_ingred(const char *buf);
-extern recipelist *get_random_recipelist(void);
 extern recipe *get_random_recipe(recipelist *rpl);
 extern void free_all_recipes(void);
 /* region.c */
@@ -335,8 +314,6 @@ extern const char *get_region_msg(const region *r);
 extern object *get_jail_exit(object *op);
 extern void init_regions(void);
 extern region *get_region_struct(void);
-extern void parse_regions(FILE *fp);
-extern void assign_region_parents(void);
 /* shstr.c */
 extern void init_hash_table(void);
 extern sstring add_string(const char *str);
@@ -365,38 +342,24 @@ extern int enough_elapsed_time(void);
 extern void sleep_delta(void);
 extern void set_max_time(long t);
 extern void get_tod(timeofday_t *tod);
-extern void print_tod(object *op);
 extern void time_info(object *op);
 extern long seconds(void);
 /* treasure.c */
 extern void init_archetype_pointers(void);
 extern void load_treasures(void);
 extern treasurelist *find_treasurelist(const char *name);
-extern void create_all_treasures(treasure *t, object *op, int flag, int difficulty, int tries);
-extern void create_one_treasure(treasurelist *tl, object *op, int flag, int difficulty, int tries);
 extern void create_treasure(treasurelist *t, object *op, int flag, int difficulty, int tries);
 extern object *generate_treasure(treasurelist *t, int difficulty);
-extern int level_for_item(const object *op, int difficulty, int retmult);
-extern int magic_from_difficulty(int difficulty);
 extern void set_abs_magic(object *op, int magic);
-extern void set_ring_bonus(object *op, int bonus);
-extern int get_magic(int diff);
 extern void fix_generated_item(object *op, object *creator, int difficulty, int max_magic, int flags);
 extern artifactlist *find_artifactlist(int type);
 extern void dump_artifacts(void);
-extern void dump_monster_treasure_rec(const char *name, treasure *t, int depth);
 extern void dump_monster_treasure(const char *name);
 extern void init_artifacts(void);
 extern void add_abilities(object *op, object *change);
 extern int legal_artifact_combination(object *op, artifact *art);
 extern void give_artifact_abilities(object *op, object *artifact);
 extern void generate_artifact(object *op, int difficulty);
-extern void fix_flesh_item(object *item, object *donor);
-extern int special_potion(object *op);
-extern void free_treasurestruct(treasure *t);
-extern void free_charlinks(linked_char *lc);
-extern void free_artifact(artifact *at);
-extern void free_artifactlist(artifactlist *al);
 extern void free_all_treasures(void);
 /* utils.c */
 extern int random_roll(int min, int max, const object *op, int goodbad);
